--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,11 +1,16 @@
-#contact {
-  background: linear-gradient(90deg, rgb(197 241 247) 70%, rgb(255, 255, 255) 100%);
-  max-width: 75%;
-  padding: 20px;
+.form-container{
+  justify-content: space-around;
+  display:block;
+
 }
 
 .form-values {
   width: 75%;
+}
+
+.form-holder{
+  justify-content: space-around;
+  display: block;
 }
 
 label,
@@ -17,4 +22,10 @@ label,
 #submit{
 background-color: rgb(142, 151, 155);
 border: 0;
+}
+
+#contact {
+  background: linear-gradient(90deg, rgb(197 241 247) 70%, rgb(255, 255, 255) 100%);
+  max-width: 75%;
+  padding: 20px;
 }
