--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -1,28 +1,50 @@
+body{
+  background-color: rgb(240 246 196)
+}
+
 .container{
   justify-content: center;
+  justify-content: center;
+  max-width: 75%;
 
 }
 
-#portfolio {
-  max-width: 75%;
-  background-image: linear-gradient(90deg, rgb(197 241 247) 70%, rgb(255, 255, 255) 100%);
- 
-  display: flex;
-  flex-wrap: wrap;
+.row{
   justify-content: space-around;
 }
 
-.portfolio-card {
-  width: 46%;
-  margin: 2%;
-  position: relative;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-  transition: box-shadow 0.3s ease-in-out;
+#top{
+  padding-top: 20px;
 }
 
-.portfolio-img {
-  width: 100%;
-  height: 100%;
+#portfolio{
+  display: block;
+  justify-content: center;
+  background: linear-gradient(90deg, rgb(197 241 247) 70%, rgb(255, 255, 255) 100%);
+  max-width: 75%;
+  min-height: 100%;
+  margin-bottom: 0;
+  padding-bottom: 80px;
+  font-family: Helvetica, Arial, sans-serif;
+  min-height: fit-content;
+}
+
+.card{
+  width: 400px;
+  height: fit-content;
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-bottom: 20px;
+}
+
+.h-100{
+  max-width: fit-content;
+  margin-top: 20px;
+}
+
+#card-img {
+  width: auto;
+  height: auto;
 }
 
 .portfolio-title {
@@ -33,20 +55,27 @@
   font-size: 2rem;
 }
 
+.card-header{
+  padding: 10px;
+  background-color: #ced4da;
+
+}
+
+.card-footer {
+  padding: 0;
+}
+
 .github-icon {
   margin-left: 20px;
-  color: rgb(18, 97, 123);
   opacity: 0;
 }
 
 .deployed-link {
-  color: rgb(18, 97, 123);
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
 }
 
 .tech-used {
-  color: rgb(18, 97, 123);
   position: absolute;
   top: 30%;
   font-size: 1.5rem;
@@ -61,7 +90,47 @@
   transition: opacity 0.3s ease-in-out;
 }
 
-.portfolio-card:hover {
+.card:hover {
   box-shadow: 0 15px 15px rgba(0, 0, 0, 0.8);
   opacity: 1;
+}
+
+@media (min-width: 972px){
+  .card-header{
+    padding: 10px;
+    background-color: #ced4da;
+    font-size: 1.5rem;
+  
+  }
+
+}
+
+@media (max-width: 972px){
+  .card-header{
+    padding: 10px;
+    background-color: #ced4da;
+    font-size: 1rem;
+  
+  }
+
+}
+
+@media (min-width: 375px){
+  .card-header{
+    padding: 10px;
+    background-color: #ced4da;
+    font-size: 0.8rem;
+  
+  }
+
+}
+
+@media (max-width: 375px){
+  .card-header{
+    padding: 10px;
+    background-color: #ced4da;
+    font-size: 0.8rem;
+  
+  }
+
 }
