--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,110 +1,101 @@
 li {
   list-style-type: none;
+  color: rgb(142, 151, 155);
+  margin: 0;
+}
+
+ul{
+  margin: 0;
+  padding: 0;
+}
+
+.mainDiv{
+  position: relative;
+}
+
+#link-color{
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  font-family:  'Lexend Zetta', sans-serif;
+  font-size: 0.5rem;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+}
+
+.b-nav-item {
+  font-family: 'Oswald', sans-serif;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
+  display: block;
+}
+
+#margin{
+  margin: 0;
+  align-content: center;
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+.bi{
+
+  align-content: center;
+  display: flex;
 }
 
 #p-0{
   padding-left: 0;
 }
 
-@media(max-width: 972px){
-  .header {
-    display: block;
-    flex-wrap: wrap;
-    height: fit-content;
-    justify-content: space-around;
-    align-items: flex-start;
-    font-size: 1.5rem;
-  }
-  
-  
-  #gradient{
-    background-image: linear-gradient(90deg, rgb(197 241 247) 70%, rgb(255, 255, 255) 100%);
-    height: fit-content;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    max-width: 75%;
-    font-family: Helvetica, Arial, sans-serif;
-  
-  }
-  
-  .nav-link {
-    font-size: 1rem;
-    padding: 0;
-    margin: 20px;
-  }
-  
-  .active {
-    font-weight: bolder;
-  }
+#download {
+  color: rgb(142, 151, 155);
+  background-color: #ffffff;
+  border-color: rgb(142, 151, 155);
+  border-radius: 0;
+  border-width: 2px;
+  margin: 0px;
+  padding: 0;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  height: 30px;
+} 
+
+#resume-link{
+  color: black;
+  text-decoration: none;
 }
 
-@media(min-width: 972px){
-  .header {
-    display: block;
-    flex-wrap: wrap;
-    height: fit-content;
-    justify-content: space-around;
-    align-items: flex-start;
-    font-size: 1.5rem;
-  }
-  
-  
-  #gradient{
-    background-image: linear-gradient(90deg, rgb(197 241 247) 70%, rgb(255, 255, 255) 100%);
-    height: fit-content;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    max-width: 75%;
-    font-family: Helvetica, Arial, sans-serif;
-  
-  }
-  
-  .nav-link {
-    font-size: 1rem;
-    padding: 0;
-    margin: 20px;
-  }
-  
-  .active {
-    font-weight: bolder;
-  }
+#top-heather{
+  display: block;
+  z-index: 1;
+  padding: 0px;
+  margin-top: 2rem;
+  max-height: fit-content;
 }
 
-@media(max-width: 375px){
-  .header {
-    flex-wrap: wrap;
-    height: fit-content;
-    justify-content: space-around;
-    font-size: 0.5rem;
-  }
-  
-  
-  #gradient{
-    background-image: linear-gradient(90deg, rgb(197 241 247) 70%, rgb(255, 255, 255) 100%);
-    height: fit-content;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    max-width: 75%;
-    font-family: Helvetica, Arial, sans-serif;
-  
-  }
-  
-  .nav-link {
-    font-size: 1rem;
-    padding: 0;
-    margin: 20px;
-  }
+.container{
+  padding: 0px;
+}
 
-  ul li {
-    text-align: center;
-    display: inline;
-    font-size: 0.5rem;
-  }
-  
-  .active {
-    font-weight: bolder;
-  }
-  }
+.navbar{
+  max-height: fit-content;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: nowrap;
+
+}
+
+.col-10{
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.forHeader{
+  display: flex;
+  flex-wrap: nowrap;
+}
