--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -17,9 +17,9 @@ ul{
   color: rgb(0, 0, 0);
   text-decoration: none;
   font-family:  'Lexend Zetta', sans-serif;
-  font-size: 0.5rem;
+  font-size: 1vw;
   font-weight: bold;
-  margin: 0;
+  margin: 5px;
   padding: 0;
 }
 
@@ -40,9 +40,9 @@ ul{
 }
 
 .bi{
-
   align-content: center;
   display: flex;
+  margin-left: 1em;
 }
 
 #p-0{
@@ -61,7 +61,7 @@ ul{
   align-items: center;
   display: flex;
   flex-wrap: wrap;
-  height: 30px;
+  height: fit-content;
 } 
 
 #resume-link{
@@ -70,7 +70,9 @@ ul{
 }
 
 #top-heather{
-  display: block;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
   z-index: 1;
   padding: 0px;
   margin-top: 2rem;
@@ -87,6 +89,9 @@ ul{
   padding: 0;
   display: flex;
   flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 
 }
 
@@ -98,4 +103,22 @@ ul{
 .forHeader{
   display: flex;
   flex-wrap: nowrap;
+}
+
+@media (max-width: 375px){
+
+  #link-color{
+    font-size: 2vw;
+  }
+
+  
+}
+
+@media (max-width: 820px){
+
+  #link-color{
+    font-size: 1.5vw;
+  }
+
+  
 }
