--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -3,18 +3,18 @@
   justify-content: center;
   min-height: 100%;
   margin-bottom: 0;
-  padding-bottom: 80px;
+  padding-bottom: 1rem;
   font-family: Helvetica, Arial, sans-serif;
   min-height: fit-content;
 }
 
 .row{
   margin-top: 5rem;
-  margin-bottom: 5rem;
+  margin-bottom: 1rem;
 }
 
 .text{
-  font-size: small;
+  font-size: 1.5vw;
 }
 
 #card-img {
@@ -69,8 +69,27 @@
   transition: opacity 0.3s ease-in-out;
 }
 
-.card:hover {
-  box-shadow: 0 15px 15px rgba(0, 0, 0, 0.8);
-  opacity: 1;
+
+.GrHeroku{
+  font-size: 30px;
+  
 }
 
+
+@media (max-width: 820px){
+
+  #color-cr-ft{
+    background-color: white;
+  }
+
+  
+}
+
+@media (min-width: 820px){
+
+  #color-cr-ft{
+    background-color: rgba(0,0,0,.03);
+  }
+
+  
+}
