--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -13,7 +13,7 @@ ul{
   position: relative;
 }
 
-#link-color{
+#resume-color{
   color: rgb(0, 0, 0);
   text-decoration: none;
   font-family:  'Lexend Zetta', sans-serif;
